# Copyright 2023 Google LLC All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "agones"
version = "1.55.0-dev"
edition = "2021"
description = "The Rust SDK for Agones."
license = "Apache-2.0"
repository = "https://github.com/googleforgames/agones"
documentation = "https://docs.rs/agones"
homepage = "https://agones.dev/site/"

[dependencies]
async-stream = "0.3.6"
http = "1.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
thiserror = "1.0.64"

[dependencies.tokio]
version = "1.40.0"
default-features = false
features = ["sync", "time"]

[dependencies.tonic]
version = "0.12.3"
default-features = false
features = ["codegen", "transport", "prost"]

[build-dependencies.tonic-build]
version = "0.12.3"
default-features = false
features = ["prost", "transport"]
